--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="./history.html">Our History</a></li>
-              <li><a class="dropdown-item" href="./article.html">Our Article</a></li>
+              <!-- <li><a class="dropdown-item" href="./article.html">Our Article</a></li> -->
             </ul>
           </li>
           <li class="nav-item">
@@ -101,9 +101,9 @@
           </div>
           <a href="./bookmyslot.html"><button class="booknowbutton">Book Now</button></a>
         </div>
-        <div class="col-md-1"></div>
-        <div class="col-md-5">
-          <img src="./asset/images/only-cycle.png" style="width: 100%; object-fit: cover;" alt="hero">
+        <!-- <div class="col-md-1"></div> -->
+        <div class="col-md-6">
+          <img src="./asset/images/RIDERS POINT.png" style="width: 100%; object-fit: cover; height: 450px;border-radius: 10px;" alt="hero">
         </div>
 
       </div>
@@ -117,12 +117,12 @@
   <section class="whychooseus section-padding">
     <div class="container">
       <p class="sub-heading-content">Why choose us ?</p>
-      <p class="sub-heading-second">Odisha's 1st Nationwide Doorstep Bicycle Service! Trusted for Over 7 Years. 15,000+
-        Happy Customers.<br> Hassle-Free Used Bicycle Buying &amp; Selling. Book Now</p>
+      <p class="sub-heading-second">Bhubaneswar’s first doorstep bicycle service provider. Trusted over 8 years with endless happy customers.
+        Hassle-Free Service with smart technician. <a href="bookmyslot.html" style="color: #000;"> Book Now</a></p>
       <p class="sub-heading-third">
-        Experience convenient, reliable bicycle repairs with FixMyCycle’s doorstep service. Our skilled mechanics
+        Experience convenient, reliable bicycle repairs with Riders Point’s doorstep service. Our skilled mechanics
         provide top-notch maintenance and tune-ups. Explore our FMC Assured platform for seamless purchases and sales of
-        authenticated pre-owned bikes. Simplify your cycling journey with FixMyCycle today! </p>
+        authenticated pre-owned bikes. Simplify your cycling journey with Riders Point today! </p>
 
 
       <!-- <div class="row" style="display: flex;justify-content: center;align-items:center; text-align: center;">
@@ -169,7 +169,7 @@
       <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col">
           <div class="card h-100">
-            <img src="./asset/images/Door-step.jpg" class="card-img-top" alt="...">
+            <img src="./asset/images/services1.jpg" style="padding: 10px;" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Door step</h5>
               <p class="card-text">Experience the ultimate in convenience with our premium doorstep service. Our
@@ -180,7 +180,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="./asset/images/In-store-service.jpg" class="card-img-top" alt="...">
+            <img src="./asset/images/services3.jpg" style="padding: 10px;" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">In store service</h5>
               <p class="card-text">Prefer to bring your bike into our state-of-the-art facility? No problem! Our
@@ -192,7 +192,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="./asset/images/pick-drop.jpg" class="card-img-top" alt="...">
+            <img src="./asset/images/service1.png" style="padding: 10px;" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">pick drop</h5>
               <p class="card-text">Hassle-free bike repairs at your convenience! Book online or via our website, and our
@@ -203,11 +203,11 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="./asset/images/Pre-owned-cycle.jpg" class="card-img-top" alt="...">
+            <img src="./asset/images/services4.jpg" style="padding: 10px;" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"> Pre-owned cycle </h5>
-              <p class="card-text">Discover effortless buying and selling of genuine pre-owned bikes with FMC Assured,
-                FixMyCycle's dedicated platform. Our expert-certified bicycles offer you unparalleled quality and
+              <p class="card-text">Discover effortless buying and selling of genuine pre-owned bikes with riders point Assured,
+                Rider's Point dedicated platform. Our expert-certified bicycles offer you unparalleled quality and
                 confidence while making your transaction a breeze. Simplify your pre-owned cycling experience – choose
                 FMC Assured today</p>
             </div>
@@ -508,7 +508,7 @@
     <div class="container">
       <p class="sub-heading-content">Testimonial</p>
       <p class="sub-heading-second">See What They Said About Us</p>
-      <p style="text-align: center;">Fix My Cycle strives to give the best customer service possible. We believe every
+      <p style="text-align: center;">Rider's Point strives to give the best customer service possible. We believe every
         customer should <br> experience top class services at their door step. Below are few reviews we have recieved
         <br>from our happy customers.</p>
       <div class="sliders mySwiper">
@@ -526,14 +526,13 @@
                               <div class="content">
                                 <div class="text-left">
                                   <div class="quote">
-                                    <p style="font-weight: 400;opacity: 0.8;font-size: 15px;">"consectetur adipisicing
-                                      elit Voluptatibus impedit periores laudantium repellendus quas"</p>
+                                    <p style="font-weight: 400;opacity: 0.8;font-size: 15px;">Awesome staff, very professional. Quality of cycles are excellent, good brand. Post purchase service is also very good.</p>
                                   </div>
-                                  <div class="img" style="font-weight: 700;font-size: 15px;">
+                                  <!-- <div class="img" style="font-weight: 700;font-size: 15px;">
                                     <img src="./testimonial/1.jpg" alt="testi" width="55"
-                                      style="border-radius: 50%;margin-right: 10px;"> Marco Asensio
-                                  </div>
-                                  <div class="star" style="color: orange;float: right;margin-top: -43px;">
+                                      style="border-radius: 50%;margin-right: 10px;"> Tanmay Meher
+                                  </div> -->
+                                  <div class="star" style="color: orange; margin-top: -17px;">
                                     <i class="fas fa-star" style="color: yellow;"></i>
                                     <i class="fas fa-star" style="color: yellow;"></i>
                                     <i class="fas fa-star" style="color: yellow;"></i>
@@ -571,11 +570,11 @@
                                       eligendi illum error illo magni quae xime corporis id qui saepe ex mahjiu main
                                       text in the world thak you more compeny all."</p>
                                   </div>
-                                  <div class="img" style="font-weight: 700;font-size: 15px;">
+                                  <!-- <div class="img" style="font-weight: 700;font-size: 15px;">
                                     <img src="./testimonial/2.jpg" alt="testi" width="55"
                                       style="border-radius: 50%;margin-right: 10px;"> Luka Marco
-                                  </div>
-                                  <div class="star" style="color: orange#08b427;float: right;margin-top: -43px;">
+                                  </div> -->
+                                  <div class="star" style="color: orange#08b427; margin-top: -17px;">
                                     <i class="fas fa-star" style="color: yellow;"></i>
                                     <i class="fas fa-star" style="color: yellow;"></i>
                                     <i class="fas fa-star" style="color: yellow;"></i>
@@ -613,11 +612,11 @@
                                       eligendi illum error illo magni quae xime corporis id qui saepe ex mahjiu main
                                       text in the world thak you more compeny all."</p>
                                   </div>
-                                  <div class="img" style="font-weight: 700;font-size: 15px;">
+                                  <!-- <div class="img" style="font-weight: 700;font-size: 15px;">
                                     <img src="./testimonial/3.jpg" alt="testi" width="55"
                                       style="border-radius: 50%;margin-right: 10px;"> Ahmed Ali
-                                  </div>
-                                  <div class="star" style="color: orange#08b427;float: right;margin-top: -43px;">
+                                  </div> -->
+                                  <div class="star" style="color: orange#08b427;margin-top: -17px;">
                                     <i class="fas fa-star" style="color: yellow;"></i>
                                     <i class="fas fa-star" style="color: yellow;"></i>
                                     <i class="fas fa-star" style="color: yellow;"></i>
@@ -655,11 +654,11 @@
                                       eligendi illum error illo magni quae xime corporis id qui saepe ex mahjiu main
                                       text in the world thak you more compeny all."</p>
                                   </div>
-                                  <div class="img" style="font-weight: 700;font-size: 15px;">
+                                  <!-- <div class="img" style="font-weight: 700;font-size: 15px;">
                                     <img src="./testimonial/1.jpg" alt="testi" width="55"
                                       style="border-radius: 50%;margin-right: 10px;"> Marco Asensio
-                                  </div>
-                                  <div class="star" style="color: orange#08b427;float: right;margin-top: -43px;">
+                                  </div> -->
+                                  <div class="star" style="color: orange#08b427; margin-top: -17px;">
                                     <i class="fas fa-star" style="color: yellow;"></i>
                                     <i class="fas fa-star" style="color: yellow;"></i>
                                     <i class="fas fa-star" style="color: yellow;"></i>
@@ -707,7 +706,7 @@
                   <h6 class="text-center">Company</h6>
                   <ul>
                       <li>
-                          <a href="./aboutus.html">About US</a>
+                          <a href="./history.html">About US</a>
                       </li>
                       <li>
                           <a href="./gearbicycleservice.html">Our Packages</a>
@@ -778,7 +777,7 @@
                     <i class="fab fa-instagram" style=" background-color: rgb(236, 236, 236); padding: 10px 13px; border-radius: 50%;"></i>
                   </a>
                   
-                  <a href="https://www.twitter.com" target="_blank" style="text-decoration: none;">
+                  <a href="https://x.com/point_ride95895" target="_blank" style="text-decoration: none;">
                     <i class="fab fa-twitter" style=" background-color: rgb(236, 236, 236); padding: 10px 11px; border-radius: 50%;"></i>
                   </a>
                   
