--- a/bookmyslot.html
+++ b/bookmyslot.html
@@ -137,7 +137,7 @@ form .btn:hover{
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="./history.html">Our History</a></li>
-              <li><a class="dropdown-item" href="./article.html">Our Article</a></li>
+              <!-- <li><a class="dropdown-item" href="./article.html">Our Article</a></li> -->
             </ul>
           </li>
           <li class="nav-item">
@@ -288,7 +288,7 @@ form .btn:hover{
                     <h6 class="text-center">Company</h6>
                     <ul>
                         <li>
-                            <a href="./aboutus.html">About US</a>
+                            <a href="./history.html">About US</a>
                         </li>
                         <li>
                             <a href="./gearbicycleservice.html">Our Packages</a>
@@ -359,7 +359,7 @@ form .btn:hover{
                         <i class="fab fa-instagram" style=" background-color: rgb(236, 236, 236); padding: 10px 13px; border-radius: 50%;"></i>
                       </a>
                       
-                      <a href="https://www.twitter.com" target="_blank" style="text-decoration: none;">
+                      <a href="https://x.com/point_ride95895" target="_blank" style="text-decoration: none;">
                         <i class="fab fa-twitter" style=" background-color: rgb(236, 236, 236); padding: 10px 11px; border-radius: 50%;"></i>
                       </a>
                       
