--- a/index.html
+++ b/index.html
@@ -41,15 +41,9 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              About Us
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="./history.html">Our History</a></li>
-              <!-- <li><a class="dropdown-item" href="./article.html">Our Article</a></li> -->
-            </ul>
+         
+          <li class="nav-item">
+            <a class="nav-link" href="./history.html">About us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./service.html">Service</a>
@@ -121,7 +115,7 @@
         Hassle-Free Service with smart technician. <a href="bookmyslot.html" style="color: #000;"> Book Now</a></p>
       <p class="sub-heading-third">
         Experience convenient, reliable bicycle repairs with Riders Point’s doorstep service. Our skilled mechanics
-        provide top-notch maintenance and tune-ups. Explore our FMC Assured platform for seamless purchases and sales of
+        provide top-notch maintenance and tune-ups. Explore our riders point Assured platform for seamless purchases and sales of
         authenticated pre-owned bikes. Simplify your cycling journey with Riders Point today! </p>
 
 
