--- a/service.html
+++ b/service.html
@@ -115,14 +115,8 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              About Us
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="./history.html">Our History</a></li>
-              <!-- <li><a class="dropdown-item" href="./article.html">Our Article</a></li> -->
-            </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="./history.html">About us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./service.html">Service</a>
