--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
       <div class="sliders mySwiper">
         <div class="image-itemss swiper-wrapper">
           <div class="images swiper-slide">
-            <div class="card-testi shadow" style="padding: 20px 13px;border-radius: 12px;">
+            <div class="card-testi shadow h-100" style="padding: 20px 13px;border-radius: 12px;">
               <div class="main-content">
                 <div class="content">
                   <div class="content-main">
@@ -520,13 +520,12 @@
                               <div class="content">
                                 <div class="text-left">
                                   <div class="quote">
-                                    <p style="font-weight: 400;opacity: 0.8;font-size: 15px;">Awesome staff, very professional. Quality of cycles are excellent, good brand. Post purchase service is also very good.</p>
+                                    <p style="font-weight: 400;opacity: 0.8;font-size: 15px;">Fantastic service and helpful staff! The bicycles are high-quality and come from reputable brands. The post-purchase service is excellent, offering quick and professional support. Definitely a great choice for anyone seeking a reliable bike and service.</p>
                                   </div>
-                                  <!-- <div class="img" style="font-weight: 700;font-size: 15px;">
-                                    <img src="./testimonial/1.jpg" alt="testi" width="55"
-                                      style="border-radius: 50%;margin-right: 10px;"> Tanmay Meher
-                                  </div> -->
-                                  <div class="star" style="color: orange; margin-top: -17px;">
+                                  <div class="img" style="font-weight: 700;font-size: 15px;">
+                                    Ankit Pal
+                                  </div>
+                                  <div class="star" style="color: orange; float:right; margin-top: -17px;">
                                     <i class="fas fa-star" style="color: yellow;"></i>
                                     <i class="fas fa-star" style="color: yellow;"></i>
                                     <i class="fas fa-star" style="color: yellow;"></i>
@@ -547,7 +546,7 @@
             </div>
           </div>
           <div class="images swiper-slide">
-            <div class="card-testi shadow" style="padding: 20px 13px;border-radius: 12px;">
+            <div class="card-testi shadow h-100" style="padding: 20px 13px;border-radius: 12px;">
               <div class="main-content">
                 <div class="content">
                   <div class="content-main">
@@ -559,16 +558,12 @@
                               <div class="content">
                                 <div class="text-left">
                                   <div class="quote">
-                                    <p style="font-weight: 400;opacity: 0.8;font-size: 15px;">"consectetur adipisicing
-                                      elit Voluptatibus impedit periores laudantium repellendus quas Quam iure amet nemo
-                                      eligendi illum error illo magni quae xime corporis id qui saepe ex mahjiu main
-                                      text in the world thak you more compeny all."</p>
+                                    <p style="font-weight: 400;opacity: 0.8;font-size: 15px;">Purchased a cycle from the store two year back. The cycle is still looks nice and running smoothy without any issues. The store provides not only quality product but also they provides high standard of services.</p>
                                   </div>
-                                  <!-- <div class="img" style="font-weight: 700;font-size: 15px;">
-                                    <img src="./testimonial/2.jpg" alt="testi" width="55"
-                                      style="border-radius: 50%;margin-right: 10px;"> Luka Marco
-                                  </div> -->
-                                  <div class="star" style="color: orange#08b427; margin-top: -17px;">
+                                  <div class="img" style="font-weight: 700;font-size: 15px;">
+                                  Shikha Mullick
+                                  </div>
+                                  <div class="star" style="color: orange#08b427; float:right; margin-top: -17px;">
                                     <i class="fas fa-star" style="color: yellow;"></i>
                                     <i class="fas fa-star" style="color: yellow;"></i>
                                     <i class="fas fa-star" style="color: yellow;"></i>
@@ -589,7 +584,7 @@
             </div>
           </div>
           <div class="images swiper-slide">
-            <div class="card-testi shadow" style="padding: 20px 13px;border-radius: 12px;">
+            <div class="card-testi shadow h-100" style="padding: 20px 13px;border-radius: 12px;">
               <div class="main-content">
                 <div class="content">
                   <div class="content-main">
@@ -601,16 +596,12 @@
                               <div class="content">
                                 <div class="text-left">
                                   <div class="quote">
-                                    <p style="font-weight: 400;opacity: 0.8;font-size: 15px;">"consectetur adipisicing
-                                      elit Voluptatibus impedit periores laudantium repellendus quas Quam iure amet nemo
-                                      eligendi illum error illo magni quae xime corporis id qui saepe ex mahjiu main
-                                      text in the world thak you more compeny all."</p>
+                                    <p style="font-weight: 400;opacity: 0.8;font-size: 15px;">"I went there to get my cycle serviced. I have a Walt X Trail 27.5. and I am really happy with the work. Technician really know his things. Great work. Just the time taken was very long I hope it was just one time. Let's see next time 3 months later."</p>
                                   </div>
-                                  <!-- <div class="img" style="font-weight: 700;font-size: 15px;">
-                                    <img src="./testimonial/3.jpg" alt="testi" width="55"
-                                      style="border-radius: 50%;margin-right: 10px;"> Ahmed Ali
-                                  </div> -->
-                                  <div class="star" style="color: orange#08b427;margin-top: -17px;">
+                                  <div class="img" style="font-weight: 700;font-size: 15px;">
+                                    Abhas Chandra Kumar
+                                  </div>
+                                  <div class="star" style="color: orange#08b427; float:right;margin-top: -17px;">
                                     <i class="fas fa-star" style="color: yellow;"></i>
                                     <i class="fas fa-star" style="color: yellow;"></i>
                                     <i class="fas fa-star" style="color: yellow;"></i>
@@ -631,7 +622,7 @@
             </div>
           </div>
           <div class="images swiper-slide">
-            <div class="card-testi shadow" style="padding: 20px 13px;border-radius: 12px;">
+            <div class="card-testi shadow h-100" style="padding: 20px 13px;border-radius: 12px;">
               <div class="main-content">
                 <div class="content">
                   <div class="content-main">
@@ -643,16 +634,12 @@
                               <div class="content">
                                 <div class="text-left">
                                   <div class="quote">
-                                    <p style="font-weight: 400;opacity: 0.8;font-size: 15px;">"consectetur adipisicing
-                                      elit Voluptatibus impedit periores laudantium repellendus quas Quam iure amet nemo
-                                      eligendi illum error illo magni quae xime corporis id qui saepe ex mahjiu main
-                                      text in the world thak you more compeny all."</p>
+                                    <p style="font-weight: 400;opacity: 0.8;font-size: 15px;">"The store is great. There's a variety of Montra and Rodeo available there. Even the servicing is very nice and the people are friendly. The only drawback is that they charge very high for servicing. Their servicing rate is 40% higher than that of normal cycle repair shops in Bhubaneswar."</p>
                                   </div>
-                                  <!-- <div class="img" style="font-weight: 700;font-size: 15px;">
-                                    <img src="./testimonial/1.jpg" alt="testi" width="55"
-                                      style="border-radius: 50%;margin-right: 10px;"> Marco Asensio
-                                  </div> -->
-                                  <div class="star" style="color: orange#08b427; margin-top: -17px;">
+                                  <div class="img" style="font-weight: 700;font-size: 15px;">
+                                    Nishant Singh Rajput
+                                  </div>
+                                  <div class="star" style="color: orange#08b427; float:right; margin-top: -17px;">
                                     <i class="fas fa-star" style="color: yellow;"></i>
                                     <i class="fas fa-star" style="color: yellow;"></i>
                                     <i class="fas fa-star" style="color: yellow;"></i>
