--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="col-md-6">
           <h2 class="hero-text"><span class="">Bicycle Service and <br> Repair At Home</span></span></h2>
           <div class="hero-paragraph">
-            <p>It’s Convenient, Transparent and Saves Time</p>
+            <p>It’s Convenient, Transparent and Saves Time. Our Service available in all over Bhubaneswar</p>
           </div>
           <a href="./bookmyslot.html"><button class="booknowbutton">Book Now</button></a>
         </div>
