--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
   </section>
   <section class="section-padding mt-5">
     <!-- footer -->
-    <footer>
+    <footer class="" style="background-color: aliceblue;padding-top: 30px;">
       <div class="container">
           <div class="row">
               <div class="col-lg-3">
