--- a/dismantlingandboxing.html
+++ b/dismantlingandboxing.html
@@ -172,7 +172,7 @@
 
 
       <h2 class="loch2">Stress-Free Bike Storage &amp; Transport</h2>
-      <p>Life takes you places, and sometimes that means storing your bike for a while. At Fix My Cycle, we understand
+      <p>Life takes you places, and sometimes that means storing your bike for a while. At Riders point, we understand
         the importance of keeping your cherished cycles safe! Our exclusive “Dismantle &amp; Box” service package is
         designed to help you efficiently pack away your bike, whether it’s a road bike, mountain bike, or another type,
         for storage or transport.</p>
@@ -180,14 +180,14 @@
         stored for a smooth reassembly process later. We’ll then place the components back into the original
         manufacturer’s boxes (if available) or use appropriate packing materials to minimize the risk of damage during
         transport.</p>
-      <h3 class="lohe">Benefits of Fix My Cycle’s Dismantle &amp; Box Service:</h3>
+      <h3 class="lohe">Benefits of Riders point’s Dismantle &amp; Box Service:</h3>
       <ul>
         <li><strong>Effortless Storage:</strong> Pack your bike away in even confined spaces.</li>
         <li><strong>Safe Transportation:</strong> Minimize the risk of damage during transport.<br><strong>Hassle-Free
             Reassembly:</strong> Easily reassemble your bike when you’re ready to ride again.</li>
       </ul>
 
-      <p>Schedule your Dismantle &amp; Box service today and experience the Fix My Cycle difference!</p>
+      <p>Schedule your Dismantle &amp; Box service today and experience the Riders point difference!</p>
 
       <div class="row text-center">
         <div class="col-12">
