--- a/gearbicycleservice.html
+++ b/gearbicycleservice.html
@@ -110,11 +110,10 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
     <p class="sub-heading-content">Packages</p>
     <p class="sub-heading-second" style="font-size: 40px;">Gear Bicycle Service Package</p>
     <div class="container" style="background-color: #3635352f; border-radius: 10px; padding: 20px;">
-      <h2 class="loch2" style=" font-size: 18px;font-weight: 700;">Gear Bicycle Repair &amp; Service at Fix My
-        Cycle!Conquer Shifting Issues</h2>
+      <h2 class="loch2" style=" font-size: 18px;font-weight: 700;">Gear Bicycle Repair &amp; Service at riders point!Conquer Shifting Issues</h2>
 
       <p style="margin-top: 10px;">Is your gear cycle giving you trouble? Experiencing clunky shifting, grinding
-        noises, or complete gear failure? Fix My Cycle offers comprehensive gear bicycle repair and service packages
+        noises, or complete gear failure? riders point offers comprehensive gear bicycle repair and service packages
         to get your ride back in top form!</p>
 
       <h3 class="lohe" style="text-transform: capitalize;font-size: 16px;font-weight: 800;margin-top: 15px;">We
@@ -153,7 +152,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
         <li>Complete lubrication of your entire drivetrain.</li>
       </ul>
 
-      <p>Don’t let gear problems slow you down! Schedule your gear bicycle service appointment online today and experience the Fix My Cycle difference. Don’t let gear problems slow you down! Schedule your gear bicycle service appointment online today and experience the Fix My Cycle difference.</p>
+      <p>Don’t let gear problems slow you down! Schedule your gear bicycle service appointment online today and experience the Fix My Cycle difference. Don’t let gear problems slow you down! Schedule your gear bicycle service appointment online today and experience the riders point difference.</p>
 
       <div class="row text-center">
         <div class="col-12">
