--- a/newbicycleservices.html
+++ b/newbicycleservices.html
@@ -170,10 +170,10 @@
         <h2 class="loch2">New Bicycle Assembly Service Package – Skip the Struggle, Ride in Style!</h2>
         <p><strong>Online Bike Purchase?</strong> Skip the Assembly Hassle! Bought a brand new bike online, but feeling
           overwhelmed by the cycle assembly process? Don’t waste precious riding time wrestling with tools and manuals!
-          Fix My Cycle is here to revolutionize your cycling experience with our exceptional New Bicycle Assembly
+         Riders point is here to revolutionize your cycling experience with our exceptional New Bicycle Assembly
           Service Package.</p>
         <p><strong>We understand the frustration:</strong> Online bike shopping offers amazing convenience, but
-          assembling your new ride can quickly turn into a stressful hassle. Fix My Cycle eliminates that frustration!
+          assembling your new ride can quickly turn into a stressful hassle.Riders point eliminates that frustration!
         </p>
         <p>Our expert technicians will arrive directly at your doorstep (within your area), ready to transform your
           boxed bike into a road-worthy companion. Here’s what’s included in our New Bicycle Assembly Service Package:
@@ -189,7 +189,7 @@
         <p><strong>All within 24 hours</strong> of booking (depending on location)! No waiting weeks for a bike shop
           appointment! Ditch the hassle of traditional bike assembly services and experience the convenience of our
           Doorstop Bike Assembly.</p>
-          <p>Don’t let bike assembly steal your cycling joy! Schedule your New Bicycle Assembly appointment today and experience the Fix My Cycle difference. We’ll have you riding in style! Here’s how to make Fix My Cycle your one-stop shop for a stress-free cycling experience:</p>
+          <p>Don’t let bike assembly steal your cycling joy! Schedule your New Bicycle Assembly appointment today and experience theRiders point difference. We’ll have you riding in style! Here’s how to makeRiders point your one-stop shop for a stress-free cycling experience:</p>
           <p>Visit our website or call us to book your appointment. | Tell us the make and model of your new bike. | Relax! Our technicians will handle the rest.</p>
 
           
