--- a/nongearbicycleservice.html
+++ b/nongearbicycleservice.html
@@ -169,11 +169,10 @@
       <p class="sub-heading-content">Packages</p>
       <p class="sub-heading-second" style="font-size: 40px;">Non Gear Bicycle Service</p>
       <div class="container" style="background-color: #3635352f; border-radius: 10px; padding: 20px;">
-        <h2 class="loch2" style=" font-size: 18px;font-weight: 700;">Non-Gear Bicycle Repair &amp; Service at Fix My
-          Cycle!Breathe New Life into Your Ride</h2>
+        <h2 class="loch2" style=" font-size: 18px;font-weight: 700;">Non-Gear Bicycle Repair &amp; Service at riders point!Breathe New Life into Your Ride</h2>
 
         <p>Searching for non-gear bicycle repair, cycle service for your fixie, or a general bicycle tune-up near you?
-          Fix My Cycle offers comprehensive service packages designed specifically for non-gear cycles (fixies,
+          riders point offers comprehensive service packages designed specifically for non-gear cycles (fixies,
           single-speeds, etc.) to keep your trusty two-wheeled companion running smoothly and safely.</p>
 
 
@@ -198,7 +197,7 @@
           <li><strong>Optional Replacements:</strong> Need new brake pads, tires, or other parts? We’ve got you covered
             (additional costs may apply).</li>
         </ul>
-        <p>Don’t wait! Schedule your non-gear bicycle repair appointment online today and experience the Fix My Cycle difference!</p>
+        <p>Don’t wait! Schedule your non-gear bicycle repair appointment online today and experience the Rider's Point difference!</p>
 
         <div class="row text-center">
           <div class="col-12">
