--- a/roadbicycleservice.html
+++ b/roadbicycleservice.html
@@ -168,9 +168,9 @@
       <p class="sub-heading-second" style="font-size: 40px;">Road Bicycle Service Package</p>
       <div class="container" style="background-color: #3635352f; border-radius: 10px; padding: 20px;">
 
-        <h2 class="loch2">Non-Gear Bicycle Repair &amp; Service at Fix My Cycle!Breathe New Life into Your Ride</h2>
+        <h2 class="loch2">Non-Gear Bicycle Repair &amp; Service at Riders point!Breathe New Life into Your Ride</h2>
         <p>Searching for non-gear bicycle repair, cycle service for your fixie, or a general bicycle tune-up near you?
-          Fix My Cycle offers comprehensive service packages designed specifically for non-gear cycles (fixies,
+          Riders point offers comprehensive service packages designed specifically for non-gear cycles (fixies,
           single-speeds, etc.) to keep your trusty two-wheeled companion running smoothly and safely.</p>
         <p>Book online today! We make it easy to schedule your non-gear bicycle repair appointment and get back on the
           road in no time.</p>
@@ -202,7 +202,7 @@
 
 
 
-        <p>Don’t wait for a breakdown to slow you down! Schedule your road bike service appointment online today and experience the Fix My Cycle difference.</p>
+        <p>Don’t wait for a breakdown to slow you down! Schedule your road bike service appointment online today and experience the Riders point difference.</p>
 
         <div class="row text-center">
           <div class="col-12">
