--- a/preowned.html
+++ b/preowned.html
@@ -109,8 +109,8 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-12">
-        <h3 class="section-title" style="font-weight: 600;">Effortlessly buy and sell authenticated pre-owned / Used bicycles with FMC Assured</h3>
-        <p>Buying and selling pre-owned bicycles can be a daunting task, but not anymore! With FMC Assured’s streamlined platform, you can now experience the ease and convenience of seamless transactions for authenticated pre-owned cycles. Our comprehensive process ensures that each bike is thoroughly inspected and certified by our team of experts, guaranteeing you top-notch quality and peace of mind. Whether you’re looking to sell your current ride or trying to find the perfect bike for your needs, FixMyCycle’s user-friendly marketplace simplifies the buying and selling process, saving you time and effort. Join us today and enjoy a hassle-free journey in the world of pre-owned cycling! </p>
+        <h3 class="section-title" style="font-weight: 600;">Effortlessly buy and sell authenticated pre-owned / Used bicycles </h3>
+        <p>Buying and selling pre-owned bicycles can be a daunting task, but not anymore! With riders point , you can now experience the ease and convenience of seamless transactions for authenticated pre-owned cycles. Our comprehensive process ensures that each bike is thoroughly inspected and certified by our team of experts, guaranteeing you top-notch quality and peace of mind. Whether you’re looking to sell your current ride or trying to find the perfect bike for your needs, Rider's Point user-friendly marketplace simplifies the buying and selling process, saving you time and effort. Join us today and enjoy a hassle-free journey in the world of pre-owned cycling! </p>
         
       </div>
       <div class="text-center" style="padding: 20px;" >
