--- a/service.html
+++ b/service.html
@@ -202,7 +202,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
             <!-- First row with image first -->
              <div class="first">
             <div class="col-md-6">
-                <img src="./asset/images/service1.png" class="img-fluid rounded-top  servicesimage" alt="Service Image" />
+                <img src="./asset/images/Untitled design/2.png" class="img-fluid rounded-top  servicesimage" alt="Service Image" />
             </div>
             <div class="col-md-6">
                 <h2 style="color: #000000; font-weight: 600;">DOOR STEP SERVICE</h2>
@@ -282,7 +282,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
             <!-- Seventh row with image first -->
              <div class="first">
             <div class="col-md-6">
-                <img src="./asset/images/services3.jpg" class="img-fluid rounded-top servicesimage" alt="Service Image" />
+                <img src="./asset/images/1.png" class="img-fluid rounded-top servicesimage" alt="Service Image" />
             </div>
             <div class="col-md-6">
                 <h2 style="color: #000000; font-weight: 600;">PRE-OWNED CYCLES</h2>
@@ -314,7 +314,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
         <div class=" row" style="display: flex; justify-content: center; align-items: center; margin-top: 50px;">
             <!-- First row with image first -->
             <div class="col-md-6">
-                <img src="./asset/images/service1.png" class="img-fluid rounded-top servicesimage" alt="Service Image" />
+                <img src="./asset/images/Untitled design/2.png" class="img-fluid rounded-top servicesimage" alt="Service Image" />
             </div>
             <div class="col-md-6">
                 <h2 style="color: #000000; font-weight: 600;">DOOR STEP SERVICE</h2>
@@ -389,7 +389,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
             <div class="col-md-6">
                 <h2 style="color: #000000; font-weight: 600;">PRE-OWNED CYCLES</h2>
                 <p>
-                    Discover effortless buying and selling of genuine pre-owned bikes with FMC Assured, Riders Point’s
+                    Discover effortless buying and selling of genuine pre-owned bikes with Riders point Assured, Riders Point’s
                     dedicated platform. Our expert-certified bicycles offer you unparalleled quality and confidence
                     while making your transaction a breeze. We’ve taken the hassle out of purchasing second-hand
                     bikes by providing transparent pricing, comprehensive inspection reports, and trusted
@@ -397,7 +397,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
                 </p>
             </div>
             <div class="col-md-6">
-                <img src="./asset/images/services3.jpg" class="img-fluid rounded-top servicesimage" alt="Service Image" />
+                <img src="./asset/images/1.png" class="img-fluid rounded-top servicesimage" alt="Service Image" />
             </div>
         </div>
     </div>
