--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="col-md-6">
           <h2 class="hero-text"><span class="">Bicycle Service and <br> Repair At Home</span></span></h2>
           <div class="hero-paragraph">
-            <p>It’s Convenient, Transparent and Saves Time. Our Service available in all over Bhubaneswar</p>
+            <p>Our Service available in all over Bhubaneswar</p>
           </div>
           <a href="./bookmyslot.html"><button class="booknowbutton">Book Now</button></a>
         </div>
@@ -115,7 +115,7 @@
         Hassle-Free Service with smart technician. <a href="bookmyslot.html" style="color: #000;"> Book Now</a></p>
       <p class="sub-heading-third">
         Experience convenient, reliable bicycle repairs with Riders Point’s doorstep service. Our skilled mechanics
-        provide top-notch maintenance and tune-ups. Explore our riders point Assured platform for seamless purchases and sales of
+        provide top-notch maintenance and tune-ups. Explore our Riders point Assured platform for seamless purchases and sales of
         authenticated pre-owned bikes. Simplify your cycling journey with Riders Point today! </p>
 
 
