--- a/history.html
+++ b/history.html
@@ -166,7 +166,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
                    <div class="page-title-content">
                        <ul>
                            <li><a href="index.html">Home</a></li>
-                           <li>History</li>
+                           <li>About Us</li>
                        </ul>
                    </div>
                </div>
@@ -203,7 +203,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
 
     <div class="row" style="display: flex;justify-content: center;align-items: center;">
       <div class="col-md-6">
-        <img src="./asset/images/RIDERS POINT.png" style="width: 100%; object-fit: cover; height: 450px;border-radius: 10px;" alt="hero">
+        <img src="./asset/images/RIDERS POINT.png" class="responsive-image" alt="hero" />
       </div>
       <div class="col-md-6">
         <h2 class="hero-text"></h2>
